# ray-hive

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
basic_ray_tests/: 1_test_basic_connection.py
examples/: 0_shutdown_models.py  1_deploy_models.py  1_test_model_configs.py  2_test_inference.py  2_test_model_configs.py  3_test_full_deployment.py
manifests/: kuberay-operator-values.yaml  kuberay-operator.yaml  nvidia-device-plugin.yaml  ray-vram-monitor-daemonset.yaml  raycluster.yaml  test-nvidia-pod-reference.yaml  vram-scheduler-configmap.yaml
ray_hive/: __init__.py  client.py  inference.py  shutdown.py
ray_hive/core/: model_orchestrator.py  model_router.py  vllm_model_actor.py  vram_allocator.py
ray_hive/utils/: ray_utils.py
scripts/stress_tests/: 2_test_rest_api.py  3_test_vram_resource.py  4_test_cpu_stress.py
scripts/vram-scheduler/: 1_deploy_models.py  2_deploy_max_llms.py  3_shutdown_models.py  4_test_inference.py  __init__.py  model_orchestrator.py  test_deploy_ergos02nv_12gb.py  vllm_model_actor.py  vram_allocator.py
vram_scheduler/: __init__.py  client.py  inference.py  langchain.py  openai_compat.py
vram_scheduler/core/: model_orchestrator.py  model_router.py  vllm_model_actor.py
